refactor: :art: change plugin loader and workdir path
the working directory is now located where the configuration file is located
