# examples/rest-service/docs/openapi.yaml
@@ -75,26 +75,7 @@ paths:
                 properties:
                   profile:
                     $ref: '#/components/schemas/Profile'
-  /profiles/{id}:
-    delete:
-      tags:
-      - profile
-      summary: Удалить профиль
-      parameters:
-      - in: path
-        name: id
-        description: |2+
-
-        required: true
-        schema:
-          description: |2+
-
-          type: string
-          example: abc
-      responses:
-        200:
-          description: OK
-  /profiles/{id}/file:
+  /profiles/:id/file:
     get:
       tags:
       - profile
@@ -121,6 +102,26 @@ paths:
                   data:
                     type: string
                     example: abc
+  /profiles/{id}:
+    delete:
+      tags:
+      - profile
+      summary: Удалить профиль
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  description: |2+
+
+                  type: string
+                  example: abc
+        required: true
+      responses:
+        200:
+          description: OK
 components:
   schemas:
     Address:
